preparing to use abseil

--- a/src/roq/Makefile.am
+++ b/src/roq/Makefile.am
@@ -5,10 +5,12 @@ libroq_logging_la_LIBADD = \
 	$(SPDLOG_LIBS) \
 	$(LIBUNWIND_LIBS) \
 	$(GFLAGS_LIBS) \
-	$(FMT_LIBS)
+	$(FMT_LIBS) \
+	$(ABSEIL_LIBS)
 libroq_logging_la_CPPFLAGS = \
 	-I$(top_builddir)/include \
 	-I$(top_srcdir)/src \
+	$(ABSEIL_CFLAGS) \
 	$(FMT_CFLAGS) \
 	$(GFLAGS_CFLAGS) \
 	$(LIBUNWIND_CFLAGS) \
