--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -26,11 +26,13 @@ requirements:
     - make
   host:
     - gflags >=2.2
+    - roq-oss-abseil-cpp >=20200225
     - roq-oss-fmt
     - roq-oss-libunwind  # [linux]
     - roq-oss-spdlog
   run:
     - gflags >=2.2
+    - roq-oss-abseil-cpp >=20200225
 
 about:
   home: https://roq-trading.com
