--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - make
   host:
     - gflags >=2.2
-    - roq-oss-abseil-cpp >=20200225
+    - roq-oss-abseil-cpp
     - roq-oss-fmt
     - roq-oss-libunwind  # [linux]
     - roq-oss-spdlog
