--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -1,37 +1,19 @@
-set(ROQ_LOGGING_SOURCES
+set(TARGET_NAME "${PROJECT_NAME}")
+
+set(SOURCES
   application.cpp
   logging.cpp
   unwind.cpp
 )
 
-add_library(roq-logging SHARED
-  ${ROQ_LOGGING_SOURCES}
-  "${HEADER_LIST}"
+add_library("${TARGET_NAME}" SHARED
+  ${SOURCES}
 )
 
-target_link_libraries(roq-logging
-  ${LIBUNWIND_LIBS}
+target_link_libraries("${TARGET_NAME}"
   absl::symbolize
   fmt::fmt
-  gflags
   spdlog::spdlog
-)
-
-set_target_properties(roq-logging PROPERTIES
-  PUBLIC_HEADER "${HEADER_LIST}"
-)
-
-install(TARGETS roq-logging
-  EXPORT roq-logging-config
-  PUBLIC_HEADER DESTINATION include/roq
-)
-
-export(TARGETS roq-logging
-  NAMESPACE roq-logging::
-  FILE "${CMAKE_INSTALL_LIBDIR}/cmake/roq-logging/roq-logging-config.cmake"
-)
-
-install(EXPORT roq-logging-config
-  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/roq-logging"
-  NAMESPACE roq-logging::
+  gflags
+  ${LIBUNWIND_LIBRARIES}
 )
