standardize cmake testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,14 +61,15 @@ add_subdirectory("${CMAKE_SOURCE_DIR}/src/roq")
 
 # test
 
-option(ROQ_LOGGING_TEST "Enable test" OFF)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+  include(CTest)
+endif()
 
-if(ROQ_LOGGING_TEST)
+if(BUILD_TESTING)
   include(GoogleTest)
   add_subdirectory("${CMAKE_SOURCE_DIR}/third_party/googletest" EXCLUDE_FROM_ALL)
-  enable_testing()
   add_subdirectory("${CMAKE_SOURCE_DIR}/test")
-endif(ROQ_LOGGING_TEST)
+endif(BUILD_TESTING)
 
 # config
 
