trim conda build dependencies

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -18,10 +18,7 @@ build:
 requirements:
   build:
     - {{ compiler('cxx') }}
-    - autoconf    # [unix]
-    - automake    # [unix]
-    - libtool     # [unix]
-    - pkg-config  # [unix]
+    - cmake
     - make
   host:
     - gflags >=2.2
