major cmake cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ include(GNUInstallDirs)
 # dependencies
 
 find_package(Libunwind REQUIRED)
+
 find_package(absl REQUIRED)
 find_package(fmt REQUIRED)
 find_package(gflags REQUIRED)
@@ -50,17 +51,16 @@ include_directories(
   "${CMAKE_SOURCE_DIR}/include"
   "${CMAKE_SOURCE_DIR}/src")
 
-# headers (public)
-
-file(GLOB HEADERS CONFIGURE_DEPENDS
-  "${CMAKE_SOURCE_DIR}/include/roq/*.h")
-
-install(FILES ${HEADERS}
-  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/roq")
-
 # sub-projects
 
 add_subdirectory("${CMAKE_SOURCE_DIR}/src/roq")
+
+# install (public headers)
+
+install(DIRECTORY "${CMAKE_SOURCE_DIR}/include/roq/"
+  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/roq"
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN "CMakeFiles" EXCLUDE)
 
 # test
 
@@ -80,15 +80,15 @@ install(TARGETS ${PROJECT_NAME}
   EXPORT ${PROJECT_NAME}-config
 )
 
-set(ROQ_LOGGING_CMAKE_DIR
+set(CMAKE_LIB_DIR
   "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
 
 export(TARGETS ${PROJECT_NAME}
   NAMESPACE ${PROJECT_NAME}::
-  FILE "${ROQ_LOGGING_CMAKE_DIR}/${PROJECT_NAME}-config.cmake"
+  FILE "${CMAKE_LIB_DIR}/${PROJECT_NAME}-config.cmake"
 )
 
 install(EXPORT ${PROJECT_NAME}-config
   NAMESPACE ${PROJECT_NAME}::
-  DESTINATION "${ROQ_LOGGING_CMAKE_DIR}"
+  DESTINATION "${CMAKE_LIB_DIR}"
 )
