--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -1,23 +1,12 @@
 set(TARGET_NAME "${PROJECT_NAME}")
 
-set(SOURCES
-  application.cpp
-  logging.cpp
-  unwind.cpp
-)
+set(SOURCES application.cpp logging.cpp unwind.cpp)
 
-add_library("${TARGET_NAME}" SHARED
-  ${SOURCES}
-)
+add_library("${TARGET_NAME}" SHARED ${SOURCES})
 
-target_link_libraries("${TARGET_NAME}" INTERFACE
-  fmt::fmt
-  PRIVATE
-    absl::symbolize
-    spdlog::spdlog
-    gflags
-    ${LIBUNWIND_LIBRARIES}
-)
+target_link_libraries(
+  "${TARGET_NAME}"
+  INTERFACE fmt::fmt
+  PRIVATE absl::symbolize spdlog::spdlog gflags ${LIBUNWIND_LIBRARIES})
 
-set_target_properties("${TARGET_NAME}"
-  PROPERTIES LINK_FLAGS_RELEASE -s)  # strip symbols
+set_target_properties("${TARGET_NAME}" PROPERTIES LINK_FLAGS_RELEASE -s) # strip symbols
