--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,23 +1,13 @@
 set(TARGET_NAME "${PROJECT_NAME}-test")
 
-set(SOURCES
-  main.cpp
-  logging.cpp
-  stacktrace.cpp
-)
+set(SOURCES main.cpp logging.cpp stacktrace.cpp)
 
 add_executable("${TARGET_NAME}" ${SOURCES})
 
 # target
 
-target_link_libraries("${TARGET_NAME}"
-  ${PROJECT_NAME}
-  absl::stacktrace
-  absl::symbolize
-  gtest_main
-)
+target_link_libraries("${TARGET_NAME}" ${PROJECT_NAME} absl::stacktrace absl::symbolize gtest_main)
 
 # run
 
-add_test(NAME "${TARGET_NAME}"
-  COMMAND "${TARGET_NAME}")
+add_test(NAME "${TARGET_NAME}" COMMAND "${TARGET_NAME}")
