use doxygen from a conda package

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -23,6 +23,7 @@ requirements:
   host:
     - gflags >=2.2
     - roq-oss-abseil-cpp
+    - roq-oss-doxygen
     - roq-oss-fmt
     - roq-oss-libunwind  # [linux]
     - roq-oss-spdlog
