--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -7,11 +7,6 @@ add_library("${TARGET_NAME}" SHARED ${SOURCES})
 target_link_libraries(
   "${TARGET_NAME}"
   INTERFACE fmt::fmt
-  PRIVATE 
-  absl::flags_parse
-  absl::flags_usage
-  absl::symbolize
-  spdlog::spdlog
-  ${LIBUNWIND_LIBRARIES})
+  PRIVATE absl::flags_parse absl::flags_usage absl::symbolize spdlog::spdlog ${LIBUNWIND_LIBRARIES})
 
 set_target_properties("${TARGET_NAME}" PROPERTIES LINK_FLAGS_RELEASE -s) # strip symbols
