enforce  _fmt / roq::format_str when formatting

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,6 +21,7 @@ requirements:
   host:
     - abseil-cpp
     - fmt
+    - roq-api =={{ version }}
     - roq-oss-libunwind  # [linux]
     - spdlog
   run:
