--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,11 @@ install(
 
 # debian
 
-set(CPACK_GENERATOR "DEB")
-set(CPACK_DEBIAN_PACKAGE_MAINTAINER "thraneh@gmail.com")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "roq-api, libabsl-dev, libspdlog-dev, libunwind-dev")
-include(CPack)
+option(BUILD_DEB "Enable debian packaging?" OFF)
+
+if (BUILD_DEB)
+  set(CPACK_GENERATOR "DEB")
+  set(CPACK_DEBIAN_PACKAGE_MAINTAINER "thraneh@gmail.com")
+  set(CPACK_DEBIAN_PACKAGE_DEPENDS "roq-api, libabsl-dev, libspdlog-dev, libunwind-dev")
+  include(CPack)
+endif(BUILD_DEB)
