--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,8 @@ add_executable("${TARGET_NAME}" ${SOURCES})
 
 target_link_libraries("${TARGET_NAME}" ${PROJECT_NAME} absl::stacktrace absl::symbolize gtest_main)
 
+target_compile_features("${TARGET_NAME}" PUBLIC cxx_std_17)
+
 # run
 
 add_test(NAME "${TARGET_NAME}" COMMAND "${TARGET_NAME}")
