manage abseil-cpp ABI compatibility issues

--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library("${TARGET_NAME}" SHARED ${SOURCES})
 
 target_link_libraries(
   "${TARGET_NAME}"
+  PRIVATE ${PROJECT_NAME}-compat
   INTERFACE fmt::fmt
   PRIVATE roq-api::roq-api absl::flags_parse absl::flags_usage absl::symbolize spdlog::spdlog
           ${LIBUNWIND_LIBRARIES})
