--- a/src/roq/compat/CMakeLists.txt
+++ b/src/roq/compat/CMakeLists.txt
@@ -4,4 +4,6 @@ set(SOURCES abseil.cpp)
 
 add_library("${TARGET_NAME}" STATIC ${SOURCES})
 
+target_link_libraries("${TARGET_NAME}" absl::flags)
+
 target_compile_features("${TARGET_NAME}" PUBLIC cxx_std_14)
