--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,16 +1,13 @@
-{% set version = environ.get('GIT_DESCRIBE_TAG', '0.0.0') %}
-{% set number = environ.get('GIT_DESCRIBE_NUMBER', 0) %}
-
 package:
   name: roq-logging
-  version: {{ version }}
+  version: {{ GIT_DESCRIBE_TAG }}
 
 source:
   git_url: ..
 
 build:
   skip: true  # [win]
-  number: {{ number }}
+  number: {{ GIT_DESCRIBE_NUMBER }}
 
 requirements:
   build:
