--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -18,7 +18,7 @@ requirements:
   host:
     - abseil-cpp
     - fmt
-    - roq-api =={{ version }}
+    - roq-api
     - roq-oss-libunwind  # [linux]
     - spdlog
   run:
