switching to roq-oss-spdlog (static library)

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - roq-api
     - roq-oss-abseil-cpp
     - roq-oss-libunwind  # [linux]
-    - spdlog
+    - roq-oss-spdlog
 
 about:
   home: https://roq-trading.com
