adding flags to control spdlog

--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(TARGET_NAME "${PROJECT_NAME}")
 
 add_subdirectory(compat)
+add_subdirectory(flags)
 
 set(SOURCES logging.cpp service.cpp tool.cpp unwind.cpp)
 
@@ -8,7 +9,7 @@ add_library("${TARGET_NAME}" SHARED ${SOURCES})
 
 target_link_libraries(
   "${TARGET_NAME}"
-  PRIVATE ${PROJECT_NAME}-compat
+  PRIVATE ${PROJECT_NAME}-compat ${PROJECT_NAME}-flags
   INTERFACE fmt::fmt
   PRIVATE roq-api::roq-api absl::flags_parse absl::flags_usage absl::symbolize spdlog::spdlog
           ${LIBUNWIND_LIBRARIES})
