add missing magic_enum dependency

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - roq-api
     - roq-oss-abseil-cpp
     - roq-oss-libunwind  # [linux]
+    - roq-oss-magic_enum
     - roq-oss-spdlog
 
 about:
