cpp20: likely/unlikely

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -7,5 +7,6 @@ filter=-build/namespaces_literals
 filter=-runtime/arrays
 filter=-runtime/references
 filter=-whitespace/braces
+filter=-readability/braces
 
 exclude_files=third_party/*
