--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -20,10 +20,10 @@ requirements:
     - doxygen
     - make
   host:
-    - catch2
     - fmt
     - roq-api
     - roq-oss-abseil-cpp
+    - roq-oss-catch2
     - roq-oss-libunwind  # [linux]
     - roq-oss-magic_enum
     - roq-oss-spdlog
