--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - roq-api
     - roq-oss-abseil-cpp
     - roq-oss-catch2
+    - roq-oss-ctre
     - roq-oss-libunwind  # [linux]
     - roq-oss-magic_enum
     - roq-oss-spdlog
