use abseil-cpp (instead of roq-oss-abseil-cpp)

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -22,7 +22,7 @@ requirements:
   host:
     - fmt
     - roq-api
-    - roq-oss-abseil-cpp
+    - abseil-cpp
     - roq-oss-catch2
     - roq-oss-ctre
     - roq-oss-libunwind  # [linux]
