--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -1,6 +1,5 @@
 set(TARGET_NAME "${PROJECT_NAME}")
 
-add_subdirectory(compat)
 add_subdirectory(logging/flags)
 
 set(SOURCES logging.cpp service.cpp tool.cpp unwind.cpp utils.cpp)
@@ -10,7 +9,7 @@ add_library("${TARGET_NAME}" SHARED ${SOURCES})
 target_link_libraries(
   "${TARGET_NAME}"
   PUBLIC roq-api::roq-api
-  PRIVATE ${PROJECT_NAME}-compat ${PROJECT_NAME}-flags
+  PRIVATE ${PROJECT_NAME}-flags
   INTERFACE fmt::fmt
   PRIVATE absl::flags_parse absl::flags_usage absl::symbolize spdlog::spdlog ${LIBUNWIND_LIBRARIES})
 
