allow externally specified build number (#264)

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -7,11 +7,12 @@ source:
 
 build:
   skip: true  # [win]
-  number: {{ GIT_DESCRIBE_NUMBER }}
+  number: {{ ROQ_BUILD_NUMBER if ROQ_BUILD_NUMBER is defined else GIT_DESCRIBE_NUMBER }}                                
+  script_env:                                                                                                           
+    - ROQ_BUILD_NUMBER                                                                                                  
+    - ROQ_BUILD_TYPE
   run_exports:
     - {{ pin_subpackage('roq-logging', max_pin='x.x.x') }}
-  script_env:                                                                                                              
-    - ROQ_BUILD_TYPE
 
 requirements:
   build:
