refactor crypto->{hash,mac}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,19 +44,19 @@ include(GNUInstallDirs)
 
 # dependencies
 
-# - cmake
+# * cmake
 
 find_package(absl REQUIRED)
 find_package(fmt REQUIRED)
 find_package(spdlog REQUIRED)
 find_package(roq-api REQUIRED)
 
-# - pkgconfig
+# * pkgconfig
 
 find_package(PkgConfig REQUIRED)
 
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-pkg_check_modules(LIBUNWIND REQUIRED libunwind)
+  pkg_check_modules(LIBUNWIND REQUIRED libunwind)
 endif()
 
 # include
