--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -9,9 +9,9 @@ add_library("${TARGET_NAME}" SHARED ${SOURCES})
 target_link_libraries(
   "${TARGET_NAME}"
   PUBLIC roq-api::roq-api
-  PRIVATE ${PROJECT_NAME}-flags
   INTERFACE fmt::fmt
-  PRIVATE absl::flags_parse absl::flags_usage absl::symbolize spdlog::spdlog ${LIBUNWIND_LIBRARIES})
+  PRIVATE ${PROJECT_NAME}-flags absl::flags_parse absl::flags_usage absl::symbolize spdlog::spdlog
+          ${LIBUNWIND_LIBRARIES})
 
 target_compile_features("${TARGET_NAME}" PUBLIC cxx_std_20)
 
