pin fmt to 9.1 (for spdlog compatibility)

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - make
     - pkg-config
   host:
-    - fmt
+    - fmt==9.1
     - roq-api
     - abseil-cpp
     - catch2  # [linux]
