--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,7 @@ endif(BUILD_DOCS)
 
 # install (cmake)
 
-install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-config)
+install(TARGETS ${PROJECT_NAME} "${PROJECT_NAME}-flags" EXPORT ${PROJECT_NAME}-config)
 
 install(FILES "${CMAKE_SOURCE_DIR}/CHANGELOG.md"
         DESTINATION "${CMAKE_INSTALL_DATADIR}/doc/${PROJECT_NAME}")
@@ -104,7 +104,7 @@ install(FILES "${CMAKE_SOURCE_DIR}/CHANGELOG.md"
 set(CMAKE_LIB_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
 
 export(
-  TARGETS ${PROJECT_NAME}
+  TARGETS ${PROJECT_NAME} "${PROJECT_NAME}-flags"
   NAMESPACE ${PROJECT_NAME}::
   FILE "${CMAKE_LIB_DIR}/${PROJECT_NAME}-config.cmake")
 
