--- a/src/roq/logging/flags/CMakeLists.txt
+++ b/src/roq/logging/flags/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(TARGET_NAME "${PROJECT_NAME}-flags")
 
-set(SOURCES flags.cpp)
+set(SOURCES flags.cpp main.cpp)
 
-add_library("${TARGET_NAME}" OBJECT ${SOURCES})
+add_library("${TARGET_NAME}" SHARED ${SOURCES})
 
-target_link_libraries("${TARGET_NAME}" absl::flags)
+target_link_libraries("${TARGET_NAME}" PRIVATE absl::flags)
