refactor logging library (#356)

--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -2,7 +2,7 @@ set(TARGET_NAME "${PROJECT_NAME}")
 
 add_subdirectory(logging/flags)
 
-set(SOURCES logger.cpp service.cpp tool.cpp unwind.cpp utils.cpp)
+set(SOURCES logging/logger.cpp logging/shared.cpp service.cpp tool.cpp unwind.cpp utils.cpp)
 
 add_library("${TARGET_NAME}" SHARED ${SOURCES})
 
