--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -24,6 +24,7 @@ requirements:
   host:
     - fmt
     - roq-api
+    - roq-flags
     - abseil-cpp
     - catch2  # [linux]
     - roq-oss-catch2  # [osx]
