--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -10,7 +10,6 @@ target_link_libraries(
   ${TARGET_NAME}
   PUBLIC roq-api::roq-api
   INTERFACE fmt::fmt
-  PRIVATE ${PROJECT_NAME}-flags absl::flags_parse absl::flags_usage absl::symbolize spdlog::spdlog
-          ${LIBUNWIND_LIBRARIES})
+  PRIVATE ${PROJECT_NAME}-flags absl::symbolize spdlog::spdlog ${LIBUNWIND_LIBRARIES})
 
 set_target_properties(${TARGET_NAME} PROPERTIES LINK_FLAGS_RELEASE -s) # strip symbols
