moving GNUInstallDirs to individual project files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,10 @@ message("Using GIT_REPO_VERSION=${GIT_REPO_VERSION}")
 
 project(roq-logging VERSION ${GIT_REPO_VERSION})
 
+# filesystem
+
+include(GNUInstallDirs)
+
 # dependencies
 
 find_package(absl REQUIRED)
