--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,8 +75,7 @@ endif()
 
 install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}-flags EXPORT ${PROJECT_NAME}-config)
 
-install(FILES ${CMAKE_SOURCE_DIR}/CHANGELOG.md
-        DESTINATION ${CMAKE_INSTALL_DATADIR}/doc/${PROJECT_NAME})
+install(FILES ${CMAKE_SOURCE_DIR}/CHANGELOG.md DESTINATION ${CMAKE_INSTALL_DATADIR}/doc/${PROJECT_NAME})
 
 set(CMAKE_LIB_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
 
