--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -3,8 +3,6 @@ set(TARGET_NAME ${PROJECT_NAME})
 add_subdirectory(logging)
 
 set(SOURCES
-    logging/spdlog/logger.cpp
-    logging/standard/logger.cpp
     logging/factory.cpp
     logging/handler.cpp
     logging/logger.cpp
@@ -20,7 +18,7 @@ target_link_libraries(
   ${TARGET_NAME}
   INTERFACE roq-api::roq-api magic_enum::magic_enum
   PUBLIC fmt::fmt
-  PRIVATE ${PROJECT_NAME}-flags absl::symbolize spdlog::spdlog ${LIBUNWIND_LIBRARIES})
+  PRIVATE ${PROJECT_NAME}-flags ${PROJECT_NAME}-spdlog ${PROJECT_NAME}-standard absl::symbolize spdlog::spdlog ${LIBUNWIND_LIBRARIES})
 
 if(ROQ_BUILD_TYPE STREQUAL "Release")
   set_target_properties(${TARGET_NAME} PROPERTIES LINK_FLAGS_RELEASE -s)
