--- a/src/roq/CMakeLists.txt
+++ b/src/roq/CMakeLists.txt
@@ -9,7 +9,6 @@ set(SOURCES
     logging/shared.cpp
     service.cpp
     tool.cpp
-    unwind.cpp
     utils.cpp)
 
 add_library(${TARGET_NAME} SHARED ${SOURCES})
@@ -18,7 +17,7 @@ target_link_libraries(
   ${TARGET_NAME}
   INTERFACE roq-api::roq-api magic_enum::magic_enum
   PUBLIC fmt::fmt
-  PRIVATE ${PROJECT_NAME}-flags ${PROJECT_NAME}-spdlog ${PROJECT_NAME}-standard absl::symbolize spdlog::spdlog ${LIBUNWIND_LIBRARIES})
+  PRIVATE ${PROJECT_NAME}-flags ${PROJECT_NAME}-spdlog ${PROJECT_NAME}-standard absl::symbolize spdlog::spdlog)
 
 if(ROQ_BUILD_TYPE STREQUAL "Release")
   set_target_properties(${TARGET_NAME} PROPERTIES LINK_FLAGS_RELEASE -s)
