magic_enum from conda-forge

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -24,9 +24,9 @@ requirements:
     - catch2
     - fmt
     - libabseil
+    - magic_enum
     - roq-api
     - roq-flags
-    - roq-oss-magic_enum
     - roq-oss-spdlog
 
 about:
